--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,3 @@
-.env
-node_modules
-uploads/*.png
-uploads/**/*.png
+git add -f uploads/*.png
+git commit -m "Include image files in uploads folder"
+git push
