--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,11 @@
-git add -f uploads/*.png
-git commit -m "Include image files in uploads folder"
-git push
+.env
+node_modules
+
+# Ignore other image types if needed
+# uploads/*.jpg
+# uploads/**/*.jpg
+
+# ALLOW PNG images in uploads (uncommented to include in git)
+# Previously blocked lines are now commented out
+# uploads/*.png
+# uploads/**/*.png
